[package]
name = "hermes_rs"
description = "A dependency-free disassembler and assembler for the Hermes bytecode"
repository = "https://github.com/Pilfer/hermes_rs"
homepage = "https://github.com/Pilfer/hermes_rs"
license = "MIT"
version = "0.1.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["v84", "v89","v90","v93","v94","v95", "v96"]
default = ["v76", "v84", "v89", "v90", "v93", "v94", "v95", "v96"]
v76 = []
v84 = []
v89 = []
v90 = []
v93 = []
v94 = []
v95 = []
v96 = []

[dependencies]
serde = { version = "1.0.214", features = ["derive"], optional = true }
sha1 = "0.10.6"
specta = { version = "1.0.5", features = [
    "export",
    "typescript",
], optional = true }
specta-util = { version = "0.0.7", optional = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"

[profile.release]
strip = true

[[bin]]
name = "decompile"
path = "src/bin/bytecode.rs"

[[bin]]
name = "sqlite_dump"
path = "src/bin/sqlite_dump.rs"

[[bin]]
name = "sqlite_from_text"
path = "src/bin/sqlite_from_text.rs"